@@ -21,8 +21,16 @@
 #include <cstdlib>
 #include <cerrno>
 
-#include <sys/select.h>
 #include <sys/time.h>
+
+#if 1 // older unices need these includes for select(2)
+# include <unistd.h>
+# include <sys/types.h>
+#endif
+
+// if the BSDs would at least be marginally POSIX-compatible.. *sigh*
+// until that happens, sys/select.h must come last
+#include <sys/select.h>
 
 #include "iom.h"
 
@@ -250,7 +258,6 @@ io_manager::io_manager ()
   set_now ();
 
   tw0.start (TSTAMP_MAX);
-  printf ("abort, %f but inly on %f\n", NOW, tw0.at);
 #endif
 }
 
